# rust-os

./: .gitignore  Cargo.toml  Makefile  README.md  x86_64-rust_os.json
.cargo/: config
src/: main.rs  vga_buffers.rs
src/arch/x86_64/: boot.asm  linker.ld  multiboot_header.asm
