[package]
name = "rust-os"
version = "0.1.0"
authors = ["chrisando <chrisep8@gmail.com>"]
edition = "2018"

[dependencies]
bootloader_precompiled = "0.3.0"
volatile = "0.2.3"
spin = "0.4.9"
array-init= "0.0.3"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"] # Needed because we dont use the stdlib

[package.metadata.bootimage]
default-target = "x86_64-rust_os.json"